--- a/index.html
+++ b/index.html
@@ -15,6 +15,32 @@
         <link rel="stylesheet" href="style.css" />
         <script src="main.js" defer></script>
     <body>
-        
+        <!-- Nav bar -->
+        <nav id="navbar">
+            <div class="navbar__logo">
+                <i class="fas fa-kiwi-bird"></i>
+                <a href="#">Minha</a>
+            </div>
+            <div class="navbar__menu">
+                <ul class="navbar__menu">
+                    <li class="navbar__menu__item">Home</li>
+                    <li class="navbar__menu__item">About</li>
+                    <li class="navbar__menu__item">Skills</li>
+                    <li class="navbar__menu__item">My work</li>
+                    <li class="navbar__menu__item">Testimonial</li>
+                    <li class="navbar__menu__item">Contact</li>
+                </ul>
+            </div>
+        </nav>
+        <!-- About -->
+        <section id="about"></section>
+        <!-- Skills -->
+        <section id="skills"></section>
+        <!-- Work -->
+        <section id="work"></section>
+        <!-- Testimonials -->
+        <section class="testimonials"></section>
+        <!-- Contact -->
+        <section class="contact"></section>
     </body>
 </html>
