--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         />
         <link rel="stylesheet" href="style.css" />
         <script src="main.js" defer></script>
+    </head>
     <body>
         <!-- Nav bar -->
         <nav id="navbar">
@@ -32,6 +33,17 @@
                 </ul>
             </div>
         </nav>
+        <!-- Home -->
+        <section id="home">
+            <img 
+            src="imgs/computer.png" 
+            alt="computer icon" 
+            class="home__avatar"
+            />
+            <h1 class="home__title">Hello, <br /> I'm Minha</h1>
+            <h2 class="home__description">Hard worker with a pot of passion</h2>
+            <button class="home__contact">CONTACT ME</button>
+        </section>
         <!-- About -->
         <section id="about"></section>
         <!-- Skills -->
