--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 </ul>
             </div>
         </nav>
+
         <!-- Home -->
         <section id="home">
             <img 
@@ -44,14 +45,65 @@
             <h2 class="home__description">Hard worker with a pot of passion</h2>
             <button class="home__contact">CONTACT ME</button>
         </section>
+
         <!-- About -->
-        <section id="about"></section>
+        <section id="about">
+            <h1>About me</h1>
+            <p>
+                I'm currently undergraduate student in Hunter College,NY.
+                Working on web developments, Python and c++ simultaneously.
+                Willing to study until I get 100.
+            </p>
+            <div class="about__majors">
+                <div class="major">
+                    <div class="major__icon">
+                        <i class="fab fa-js"></i>
+                    </div>
+                    <div class="major__title">Front-end</div>
+                    <p class="major__description">
+                        HTML, CSS, Javascript,<br>
+                        TypeScript, React</p>
+                </div>
+                <div class="major">
+                    <div class="major__icon">
+                        <i class="fab fa-python"></i>
+                    </div>
+                    <div class="major__title">Data Science</div>
+                    <p class="major__description">
+                        Python, Webscrapper</p>
+                </div>
+                <div class="major">
+                    <div class="major__icon">
+                        <i class="fas fa-server"></i>
+                    </div>
+                    <div class="major__title">Back-end</div>
+                    <p class="major__description">
+                        C, C++, Rust</p>
+                </div>
+            </div>
+            <div class="about__edu">
+                <div class="edu">
+                    <img src="/imgs/LAGCC logo.png" class="edu__logo">
+                    <p class="edu__name">Graduated from LAGCC</p>
+                    <p class="edu__period">2016 ~ 2018 </p>
+                </div>
+                <div class="edu">
+                    <img src="/imgs/Hunter logo.png" class="edu__logo">
+                    <p class="edu__name">Attending Hunter College</p>
+                    <p class="edu__period">2018 ~ until now, majored in Computer Science</p>
+                </div>
+            </div>
+        </section>
+
         <!-- Skills -->
         <section id="skills"></section>
+
         <!-- Work -->
         <section id="work"></section>
+
         <!-- Testimonials -->
         <section class="testimonials"></section>
+
         <!-- Contact -->
         <section class="contact"></section>
     </body>
