--- a/index.html
+++ b/index.html
@@ -171,10 +171,59 @@
         </section>
 
         <!-- Work -->
-        <section id="work"></section>
+        <section id="work">
+            <h1>My Work</h1>
+            <h3>Projects</h3>
+            <div class="work__categories">
+                <button class="category__btn">
+                    All<span class="category__count">8</span>
+                </button>
+                <button class="category__btn">
+                    Front<span class="category__count">3</span>
+                </button>
+                <button class="category__btn">
+                    Back<span class="category__count">3</span>
+                </button>
+                <button class="category__btn">
+                    Mobile<span class="category__count">2</span>
+                </button>
+            </div>
+            <div class="work__projects">
+                <a 
+                href="url" 
+                class="project" 
+                target="blank"
+                >
+                <img class="project__img" src="screenshot" alt="">
+                <div class="project__description">
+                    <h3>title</h3>
+                    <span>description</span>
+                </div>
+            </a>
+            </div>
+        </section>
 
         <!-- Testimonials -->
-        <section class="testimonials"></section>
+        <section class="testimonials">
+            <h1>Testimonials</h1>
+            <h3>See What they say about me</h3>
+            <div class="testimonials">
+                <div class="testimonial">
+                    <img src="/imgs/einstain.png" class="testimonial__avatar">
+                    <div class="testimonial__speech-bubble">
+                        <p>blah blah</p>
+                        <p class="name"><a href="url"></a> / Ginius</p>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <img src="/imgs/einstain.png" class="testimonial__avatar">
+                    <div class="testimonial__speech-bubble">
+                        <p>blah blah</p>
+                        <p class="name"><a href="url"></a> / Ginius</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- Contact -->
         <section class="contact"></section>
