--- a/index.html
+++ b/index.html
@@ -226,6 +226,20 @@
         </section>
 
         <!-- Contact -->
-        <section class="contact"></section>
+        <section class="contact">
+            <h1 class="contact__title">Let's talk</h1>
+            <h2 class="contact__email">shjung1994@gmail.com</h2>
+            <div class="contact__links">
+                <a href="" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="url" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </div>
+            <p class="contact__rights">
+                2020 Minha's web portfolio - All rights reserved
+            </p>
+        </section>
     </body>
 </html>
