--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
 
         <!-- About -->
-        <section id="about" class="section">
+        <section id="about" class="section section__container">
             <h1>About me</h1>
             <p>
                 I'm currently undergraduate student in Hunter College,NY.
@@ -83,7 +83,7 @@
             </div>
             <div class="about__edu">
                 <div class="edu">
-                    <img src="/imgs/LAGCC logo.png" class="edu__logo">
+                    <img src="/imgs/LAGCC logo.png" class="edu__logo big__logo">
                     <div class="edu__description">
                         <p class="edu__name">Graduated from LAGCC</p>
                         <p class="edu__period">2016 ~ 2018 </p>
@@ -101,74 +101,80 @@
 
         <!-- Skills -->
         <section id="skills" class="section">
-            <h1>Skills</h1>
-            <h2>Skills & Attributes</h2>
-            <p>blah blah</p>
-            <div class="skillset">
-                <div class="skillset__left">
-                    <h3 class="skillset__title">Skills</h3>
-                    <div class="skill">
-                        <div class="skill__description">
-                            <span>HTML</span>
-                            <span>90%</span>
+            <div class="section__container">
+                <h1>Skills</h1>
+                <h2>Skills & Attributes</h2>
+                <p>
+                    Started Coding from June 5th. I've been learning web developement so far,<br>
+                    nowadays focusing on Vanila JS and plan to move on react and dig python deeper,<br>
+                    keep trying to maintain the momentum. Hard Worker!!
+                </p>
+                <div class="skillset">
+                    <div class="skillset__left">
+                        <h3 class="skillset__title">Skills</h3>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>HTML</span>
+                                <span>90%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value"></div>
+                            </div>
                         </div>
-                        <div class="skill__bar">
-                            <div class="skill__value"></div>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>CSS</span>
+                                <span>90%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value"></div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>Javascript</span>
+                                <span>90%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value"></div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>Python</span>
+                                <span>90%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value"></div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>C++</span>
+                                <span>90%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value"></div>
+                            </div>
                         </div>
                     </div>
-                    <div class="skill">
-                        <div class="skill__description">
-                            <span>CSS</span>
-                            <span>90%</span>
+                    <div class="skillset__right">
+                        <div class="tools">
+                            <h3 class="skillset__title">Tools</h3>
+                            <ul class="tools__list">
+                                <li><span>Visual Studio Code</span></li>
+                                <li><span>Atom</span></li>
+                                <li><span>Repl.it</span></li>
+                            </ul>
                         </div>
-                        <div class="skill__bar">
-                            <div class="skill__value"></div>
+                        <div class="etc">
+                            <h3 class="skillset__title">Etc</h3>
+                            <ul class="etc__list">
+                                <li><span>Git</span></li>
+                                <li><span>Organizing</span></li>
+                                <li><span>Memo</span></li>
+                            </ul>
                         </div>
-                    </div>
-                    <div class="skill">
-                        <div class="skill__description">
-                            <span>Javascript</span>
-                            <span>90%</span>
-                        </div>
-                        <div class="skill__bar">
-                            <div class="skill__value"></div>
-                        </div>
-                    </div>
-                    <div class="skill">
-                        <div class="skill__description">
-                            <span>Python</span>
-                            <span>90%</span>
-                        </div>
-                        <div class="skill__bar">
-                            <div class="skill__value"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>C++</span>
-                        <span>90%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill__value"></div>
-                    </div>
-                </div>
-                <div class="skillset__right">
-                    <div class="tools">
-                        <h3 class="skillset__title">Tools</h3>
-                        <ul class="tools__list">
-                            <li><span>Visual Studio Code</span></li>
-                            <li><span>Atom</span></li>
-                            <li><span>Repl.it</span></li>
-                        </ul>
-                    </div>
-                    <div class="etc">
-                        <h3 class="skillset__title">Etc</h3>
-                        <ul class="etc__list">
-                            <li><span>Git</span></li>
-                            <li><span>Organizing</span></li>
-                            <li><span>Memo</span></li>
-                        </ul>
                     </div>
                 </div>
             </div>
