HTML: testimonial, contact, minor bug fix

--- a/index.html
+++ b/index.html
@@ -182,61 +182,65 @@
 
         <!-- Work -->
         <section id="work" class="section">
-            <h1>My Work</h1>
-            <h3>Projects</h3>
-            <div class="work__categories">
-                <button class="category__btn">
-                    All<span class="category__count">8</span>
-                </button>
-                <button class="category__btn">
-                    Front<span class="category__count">3</span>
-                </button>
-                <button class="category__btn">
-                    Back<span class="category__count">3</span>
-                </button>
-                <button class="category__btn">
-                    Mobile<span class="category__count">2</span>
-                </button>
-            </div>
-            <div class="work__projects">
-                <a 
-                href="url" 
-                class="project" 
-                target="blank"
-                >
-                <img class="project__img" src="screenshot" alt="">
-                <div class="project__description">
-                    <h3>title</h3>
-                    <span>description</span>
+            <div class="section__container">
+                <h1>My Work</h1>
+                <h3>Projects</h3>
+                <div class="work__categories">
+                    <button class="category__btn">
+                        All<span class="category__count">8</span>
+                    </button>
+                    <button class="category__btn">
+                        Front<span class="category__count">3</span>
+                    </button>
+                    <button class="category__btn">
+                        Back<span class="category__count">3</span>
+                    </button>
+                    <button class="category__btn">
+                        Mobile<span class="category__count">2</span>
+                    </button>
                 </div>
-            </a>
+                <div class="work__projects">
+                    <a 
+                    href="url" 
+                    class="project" 
+                    target="blank"
+                    >
+                    <img class="project__img" src="screenshot" alt="">
+                    <div class="project__description">
+                        <h3>title</h3>
+                        <span>description</span>
+                    </div>
+                </a>
+                </div>
             </div>
         </section>
 
         <!-- Testimonials -->
-        <section class="testimonials" class="section">
-            <h1>Testimonials</h1>
-            <h3>See What they say about me</h3>
-            <div class="testimonials">
-                <div class="testimonial">
-                    <img src="/imgs/einstain.png" class="testimonial__avatar">
-                    <div class="testimonial__speech-bubble">
-                        <p>blah blah</p>
-                        <p class="name"><a href="url"></a> / Ginius</p>
+        <section id="testimonials" class="section">
+            <div class="section__container">
+                <h1>Testimonials</h1>
+                <h3>See What they say about me</h3>
+                <div class="testimonials">
+                    <div class="testimonial">
+                        <img src="/imgs/einstain.png" class="testimonial__avatar">
+                        <div class="testimonial__speech-bubble">
+                            <p>양자물리학 설립한 내가 인정한다. 이놈은 잡아야한다. 나 아인슈타인이야. 내가 보장한다.</p>
+                            <p class="name"><a href="url">address</a> / Ginius</p>
+                        </div>
                     </div>
-                </div>
-                <div class="testimonial">
-                    <img src="/imgs/einstain.png" class="testimonial__avatar">
-                    <div class="testimonial__speech-bubble">
-                        <p>blah blah</p>
-                        <p class="name"><a href="url"></a> / Ginius</p>
+                    <div class="testimonial">
+                        <div class="testimonial__speech-bubble">
+                            <p>양자물리학 설립한 내가 인정한다. 이놈은 잡아야한다. 나 아인슈타인이야. 내가 보장한다.</p>
+                            <p class="name"><a href="url">address</a> / Ginius</p>
+                        </div>
+                        <img src="/imgs/einstain.png" class="testimonial__avatar">
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- Contact -->
-        <section class="contact" class="section">
+        <section id="contact" class="section">
             <h1 class="contact__title">Let's talk</h1>
             <h2 class="contact__email">shjung1994@gmail.com</h2>
             <div class="contact__links">
