--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
 
         <!-- Home -->
         <section id="home">
-            <img 
-            src="imgs/computer.png" 
-            alt="computer icon" 
-            class="home__avatar"
-            />
-            <h1 class="home__title">Hello, <br /> I'm Minha</h1>
-            <div class="home__description">Hard worker with a pot of passion</div>
-            <button class="home__contact">CONTACT ME</button>
+            <div class="home__container">
+                <img 
+                src="imgs/computer.png" 
+                alt="computer icon" 
+                class="home__avatar"
+                />
+                <h1 class="home__title">Hello, <br /> I'm Minha</h1>
+                <div class="home__description">Hard worker with a pot of passion</div>
+                <button class="home__contact">CONTACT ME</button>
+            </div>
         </section>
 
         <!-- About -->
@@ -259,5 +261,10 @@
                 2020 Minha's web portfolio - All rights reserved
             </p>
         </section>
+        
+        <!-- Arrow button -->
+        <button class="arrow-up">
+            <i class="fas fa-arrow-up"></i>
+        </button>
     </body>
 </html>
