--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <h1>My Work</h1>
                 <h3>Projects</h3>
                 <div class="work__categories">
-                    <button class="category__btn" data-category="*">
+                    <button class="category__btn selected" data-category="*">
                         All<span class="category__count">8</span>
                     </button>
                     <button class="category__btn" data-category="front-end">
