--- a/index.html
+++ b/index.html
@@ -22,16 +22,14 @@
                 <i class="fas fa-kiwi-bird"></i>
                 <a href="#">Minha</a>
             </div>
-            <div class="navbar__menus">
-                <ul class="navbar__menu">
-                    <li class="navbar__menu__item active" data-link="#home">Home</li>
-                    <li class="navbar__menu__item" data-link="#about">About</li>
-                    <li class="navbar__menu__item" data-link="#skills">Skills</li>
-                    <li class="navbar__menu__item" data-link="#work">My work</li>
-                    <li class="navbar__menu__item" data-link="#testimonials">Testimonial</li>
-                    <li class="navbar__menu__item" data-link="#contact">Contact</li>
-                </ul>
-            </div>
+            <ul class="navbar__menu">
+                <li class="navbar__menu__item" data-link="#home">Home</li>
+                <li class="navbar__menu__item" data-link="#about">About</li>
+                <li class="navbar__menu__item" data-link="#skills">Skills</li>
+                <li class="navbar__menu__item" data-link="#work">My work</li>
+                <li class="navbar__menu__item" data-link="#testimonials">Testimonial</li>
+                <li class="navbar__menu__item" data-link="#contact">Contact</li>
+            </ul>
             <!-- Toggle button -->
             <button class="navbar__toggle-btn">
                 <i class="fas fa-bars"></i>
