--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                         All<span class="category__count">8</span>
                     </button>
                     <button class="category__btn" data-category="front-end">
-                        Front<span class="category__count">3</span>
+                        Front-end<span class="category__count">3</span>
                     </button>
                     <button class="category__btn" data-category="back-end">
-                        Back<span class="category__count">3</span>
+                        Back-end<span class="category__count">3</span>
                     </button>
                     <button class="category__btn" data-category="mobile">
                         Mobile<span class="category__count">2</span>
