--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
             </div>
             <div class="about__edu">
                 <div class="edu">
-                    <img src="imgs/LAGCC logo.png" class="edu__logo big__logo">
+                    <img src="imgs/lagcc_logo.png" class="edu__logo big__logo">
                     <div class="edu__description">
                         <p class="edu__name">Graduated from LAGCC</p>
                         <p class="edu__period">2016 ~ 2018 </p>
                     </div>
                 </div>
                 <div class="edu">
-                    <img src="imgs/Hunter logo.png" class="edu__logo">
+                    <img src="imgs/hunter_logo.png" class="edu__logo">
                     <div class="edu__description">
                         <p class="edu__name">Attending Hunter College</p>
                         <p class="edu__period">2018 ~ until now, majored in Computer Science</p>
