--- a/index.html
+++ b/index.html
@@ -87,22 +87,14 @@
             </div>
             <div class="about__edu">
                 <div class="edu">
-<<<<<<< HEAD
                     <img src="imgs/lagcc_logo.png" class="edu__logo big__logo">
-=======
-                    <img src="/imgs/LAGCC logo.png" class="edu__logo big__logo">
->>>>>>> parent of 177f6c5... image prob
                     <div class="edu__description">
                         <p class="edu__name">Graduated from LAGCC</p>
                         <p class="edu__period">2016 ~ 2018 </p>
                     </div>
                 </div>
                 <div class="edu">
-<<<<<<< HEAD
                     <img src="imgs/hunter_logo.png" class="edu__logo">
-=======
-                    <img src="/imgs/Hunter logo.png" class="edu__logo">
->>>>>>> parent of 177f6c5... image prob
                     <div class="edu__description">
                         <p class="edu__name">Attending Hunter College</p>
                         <p class="edu__period">2018 ~ until now, majored in Computer Science</p>
@@ -259,7 +251,7 @@
                 <h3>See What they say about me</h3>
                 <div class="testimonials">
                     <div class="testimonial">
-                        <img src="/imgs/einstain.png" class="testimonial__avatar">
+                        <img src="imgs/einstain.png" class="testimonial__avatar">
                         <div class="testimonial__speech-bubble">
                             <p>양자물리학 설립한 내가 인정한다. 이놈은 잡아야한다. 나 아인슈타인이야. 내가 보장한다.</p>
                             <p class="name"><a href="url">address</a> / Ginius</p>
@@ -270,7 +262,7 @@
                             <p>양자물리학 설립한 내가 인정한다. 이놈은 잡아야한다. 나 아인슈타인이야. 내가 보장한다.</p>
                             <p class="name"><a href="url">address</a> / Ginius</p>
                         </div>
-                        <img src="/imgs/einstain.png" class="testimonial__avatar">
+                        <img src="imgs/einstain.png" class="testimonial__avatar">
                     </div>
                 </div>
             </div>
