--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
             </div>
             <div class="about__edu">
                 <div class="edu">
-                    <img src="imgs/lagcc_logo.png" class="edu__logo big__logo">
+                    <img src="./imgs/lagcc_logo.png" class="edu__logo big__logo">
                     <div class="edu__description">
                         <p class="edu__name">Graduated from LAGCC</p>
                         <p class="edu__period">2016 ~ 2018 </p>
                     </div>
                 </div>
                 <div class="edu">
-                    <img src="imgs/hunter_logo.png" class="edu__logo">
+                    <img src="./imgs/hunter_logo.png" class="edu__logo">
                     <div class="edu__description">
                         <p class="edu__name">Attending Hunter College</p>
                         <p class="edu__period">2018 ~ until now, majored in Computer Science</p>
@@ -262,7 +262,7 @@
                             <p>양자물리학 설립한 내가 인정한다. 이놈은 잡아야한다. 나 아인슈타인이야. 내가 보장한다.</p>
                             <p class="name"><a href="url">address</a> / Ginius</p>
                         </div>
-                        <img src="imgs/einstain.png" class="testimonial__avatar">
+                        <img src="./imgs/einstain.png" class="testimonial__avatar">
                     </div>
                 </div>
             </div>
